# rustchat

./: Cargo.toml
frontend/: app.js  index.html  login.js  main.js  register.js  styles.css  utils.js
src/: db.rs  handlers.rs  main.rs  routes.rs
