[package]
name = "realtime_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
warp = "0.3.7"
tokio-tungstenite = "0.24.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.102"
chrono = "0.4.31"
dotenvy = "0.15"
bcrypt = "0.13"
jsonwebtoken = "8.3.0"


